fix porkers line on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -98,20 +98,17 @@ table {
   width: 100%;
 }
 
-.PORK\#582 {
-  position: relative;
+.porkersLine {
+  position: relative;  
 }
 
-.PORK\#582:after {
-  content: '';
-  width: calc(100% - 15px);
-  height: 1px;
-  margin: 0 auto;
+.porkersLine::after {
+  content: "";
+  width: calc(100% - 18px);
   position: absolute;
-  background: #393e47;
-  bottom: 0;
   left: 50%;
   transform: translateX(-50%);
+  border-bottom: solid 1px #393e47;
 }
 
 @media (min-width: 360px) {
